--- a/RTS-T25/log4j.properties
+++ b/RTS-T25/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.FILE.File=${user.home}/sir/log.txt
  
 # now define the layout for the appender
 log4j.appender.consoleAppender.layout = org.apache.log4j.PatternLayout
-log4j.appender.consoleAppender.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.consoleAppender.layout.ConversionPattern=%d{ABSOLUTE} [%t] %5p %c{1}:%L - %m%n  
 
 log4j.appender.FILE.layout = org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
