fixed memeory issues

--- a/RTS-T25/.classpath
+++ b/RTS-T25/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="lib/commons-exec-1.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ARTS"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.7.jar"/>
+	<classpathentry kind="lib" path="lib/classmexer.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
