--- a/RTS-T25/.classpath
+++ b/RTS-T25/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ARTS"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.7.jar"/>
 	<classpathentry kind="lib" path="lib/classmexer.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
